Remove overflow hidden defined on the root eleemnt as it avoid us from using sticky on tables and used it (if needed) only on the menu element

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   min-height: 100vh;
   /*width: 100vw;*/
-  overflow: hidden;
 
   & > main {
     flex: 1;
